tests/neg/toplevel-package/defs_1.scala
package foo
package bar
  class C
  def hello(x: String): Unit =
    println(s"hello: $x")

